make nav contrast correct

--- a/themes/bloggin/assets/sass/_nav.scss
+++ b/themes/bloggin/assets/sass/_nav.scss
@@ -73,7 +73,7 @@
     margin-top: 5px;
     margin-left: 10px;
     margin-bottom: 2rem;
-    color: darken($background, 20%);
+    color: lighten($flourish, 35%);
     font-style: italic;
   }
 
